# pyrrtm-lite

./: .gitignore  LICENSE  README.md  bug_fix_comparison.csv  config_template.json  pyproject.toml  pyrrtm_lite.py  pyrrtmlite_bugs.txt  test_bug_impact.py
data/: lw_coeffs.nc  sw_coeffs.nc
lw/: __init__.py  aerosol.py  bands.py  cf_reader.py  cloud_optics.py  constants.py  io_nc.py  load_coeffs.py  rtreg.py  run.py  setcoef.py  sounding.py  std_atm.py  taumol.py
sw/: __init__.py  aerosol.py  bands.py  cf_reader.py  cloud_optics.py  constants.py  io_nc.py  load_coeffs.py  rtrdis.py  run.py  setcoef.py  sounding.py  std_atm.py  taumol.py
