[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyrrtm-lite-fixed"
version = "0.2.0"
description = "Bug-fixed broadband radiative flux profiles from CF-NetCDF soundings (12 Python translation errors corrected)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "netCDF4>=1.5",
    "pandas>=1.3",
    "pvlib>=0.9",
]

[project.scripts]
pyrrtm-lite = "pyrrtm_lite:main"

[project.urls]
Homepage = "https://github.com/vghate/pyrrtm-lite"
"Bug report" = "https://github.com/vghate/pyrrtm-lite/issues"
"Parent package" = "https://github.com/vghate/pyrrtm"
